[package]
name = "wgpu-test1"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wgpu = { git = "https://github.com/gfx-rs/wgpu.git", tag = "v0.14.1"}
winit = "0.27.5"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
cfg-if = "1.0.0"

#[target.'cfg(target_arch = "wasm32")'.dependencies]
#console_error_panic_hook = "0.1.6"
#console_log = "0.2.0"
#wgpu = { version = "0.14", features = ["webgl"]}
#wasm-bindgen = "0.2"
#wasm-bindgen-futures = "0.4.30"
#web-sys = { version = "0.3", features = [
#    "Document",
#    "Window",
#    "Element",
#]}

