[package]
name = "no-name"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wgpu = { git = "https://github.com/gfx-rs/wgpu.git", tag = "v0.14.1"}
winit = "0.27.5"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["time"] }
cfg-if = "1.0.0"
tokio = { version = "1.19.2", features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tracing-web = "0.1.2"
wgpu = { git = "https://github.com/gfx-rs/wgpu.git", tag = "v0.14.1", features = ["webgl"]}
log = "0.4.1"
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}

